<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="@dimen/spacing_medium"
    tools:context=".WelcomeActivity">

    <!-- Decorative Circle Background -->
    <View
        android:id="@+id/decorativeCircle1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/circle_background"
        android:alpha="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <View
        android:id="@+id/decorativeCircle2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/circle_background"
        android:alpha="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- Logo with Shadow -->
    <androidx.cardview.widget.CardView
        android:id="@+id/logoCard"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:cardCornerRadius="70dp"
        app:cardElevation="12dp"
        app:cardBackgroundColor="@color/background_white"
        app:layout_constraintBottom_toTopOf="@+id/appNameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decorativeCircle1"
        app:layout_constraintVertical_chainStyle="packed">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo_warm_clouds"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:padding="15dp" />
    </androidx.cardview.widget.CardView>

    <!-- App Name with Gradient Effect -->
    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textColor="@color/primary_blue"
        android:textSize="36sp"
        android:textStyle="bold"
        android:letterSpacing="0.02"
        android:layout_marginTop="@dimen/spacing_large"
        app:layout_constraintBottom_toTopOf="@+id/welcomeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoCard" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_subtitle"
        android:textColor="@color/text_secondary"
        android:textSize="17sp"
        android:textAlignment="center"
        android:lineSpacingMultiplier="1.4"
        android:paddingStart="@dimen/spacing_xlarge"
        android:paddingEnd="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintBottom_toTopOf="@+id/getStartedButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appNameTextView" />

    <!-- Get Started Button with Material Design -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/getStartedButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_large"
        android:text="@string/get_started"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingStart="@dimen/spacing_xlarge"
        android:paddingEnd="@dimen/spacing_xlarge"
        android:layout_marginStart="@dimen/spacing_xlarge"
        android:layout_marginEnd="@dimen/spacing_xlarge"
        android:layout_marginTop="@dimen/spacing_xxlarge"
        android:layout_marginBottom="@dimen/spacing_xlarge"
        app:backgroundTint="@color/accent_brown"
        app:cornerRadius="@dimen/corner_radius_large"
        app:elevation="@dimen/elevation_medium"
        app:rippleColor="@color/accent_brown_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>

